# MarkdownParser

./: .gitattributes  .gitignore  Makefile  README.md  final.md  generate.py  html.md  index.css  index.html  main.py  pyproject.toml  template.html  test.md  test.py  update.py
.github/workflows/: test.yml  update.yml
MarkdownParser/: __init__.py  base_class.py  base_parser.py  block_parser.py  core.py  export.py  export_parser.py  preprocess_parser.py  template.html  tree_parser.py
MarkdownParser/css/: github.css
testfiles/: final.md  h2.md  hierty.md  html.md  test.md  test1.md  test11.md  test13.md  test14.md  test15.md  test16.md  test17.md  test18.md  test19.md  test2.md  test21.md  test3.md  test4.md  test5.md  test6.md  test9.md
testfiles/html/: test1.html  test10.html  test11.html  test12.html  test13.html  test14.html  test15.html  test16.html  test17.html  test18.html  test19.html  test2.html  test20.html  test21.html  test22.html  test23.html  test24.html  test25.html  test26.html  test27.html  test28.html  test29.html  test3.html  test30.html  test31.html  test32.html  test33.html  test4.html  test5.html  test6.html  test7.html  test8.html  test9.html
testfiles/md/: test1.md  test10.md  test11.md  test12.md  test14.md  test17.md  test20.md  test22.md  test23.md  test24.md  test25.md  test26.md  test27.md  test28.md  test29.md  test3.md  test30.md  test31.md  test32.md  test33.md  test7.md  test8.md
