[tool.poetry]
name = "MarkdownParser"
version = "0.5.19"
description = ""
authors = ["luzhixing12345 <luzhixing12345@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luzhixing12345/MarkdownParser"
documentation = "https://luzhixing12345.github.io/MarkdownParser/"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
